# EloomenEngine

./: CMakeLists.txt  README.md
backends/core/: input_interface.h  renderer_interface.h  window_interface.h
backends/dx12/: _post.cmake  _pre.cmake
backends/dx12/include/rendering/: renderer_dx12.h  window_dx12.h
backends/dx12/src/rendering/: renderer_dx12.cpp  window_dx12.cpp
cmake/automations/errc_header_gen/: automate.cmake  errc.h.in
cmake/automations/errc_header_gen/data/: filesystem.json  localization.json  serialization.json  streaming.json
demo_project/: CMakeLists.txt
demo_project/src/: main.cpp
engine/: CMakeLists.txt
engine/backends/core/interfaces/: renderer_interface.h  window_interface.h
engine/backends/dx12/: dx12_pre.cmake
engine/backends/dx12/include/: renderer_dx12.h
engine/backends/dx12/src/: renderer_dx12.cpp  window_dx12.cpp
engine/backends/win32/: CMakeLists.txt
engine/backends/win32/dx12/: CMakeLists.txt
engine/backends/win32/dx12/include/dx12/: renderer_dx12.h  window_dx12.h
engine/backends/win32/dx12/src/: renderer_dx12.cpp  window_dx12.cpp
engine/include/: logging.h
engine/include/datatypes/: float2.h  float3.h  float4.h  half.h  int2.h  int3.h  int4.h  matrix2x2.h  matrix3x3.h  matrix4x4.h  quaternion.h
engine/include/error_codes/: filesystem_errc.h  localization_errc.h  serialization_errc.h  streaming_errc.h
engine/include/events/engine/: data.h  events.h
engine/include/filesystem/: filestream.h  filesystem.h
engine/include/maths/: constants.h  interpolation.h  math.h
engine/include/rendering/: camera.h  material.h  mesh.h  renderer.h  texture.h  window.h
engine/include/serialization/: serialization.h
engine/include/streaming/: streaming.h
engine/include/utility/: bitflag_helpers.h  chrono_helpers.h  colour.h  defines.h  imgui_ext.h  managed_memory_block.h  observer.h  raycast.h  spherecast.h
engine/include/utility/localization/: localization.h
engine/src/: logging.cpp
engine/src/datatypes/: float2.cpp  float3.cpp  float4.cpp  int2.cpp  int3.cpp  int4.cpp  matrix2x2.cpp  matrix3x3.cpp  matrix4x4.cpp  quaternion.cpp
engine/src/maths/: interpolation.cpp
engine/src/rendering/: camera.cpp  mesh.cpp  renderer.cpp  texture.cpp  window.cpp
engine/src/utility/: imgui_ext.cpp  raycast.cpp  serialization.cpp  streaming.cpp
engine/src/utility/filesystem/: filestream.cpp  filesystem.cpp
include/: Camera.h  Engine.h  Game.h  GameEvents.h  GameObject.h  Logging.h  Math.h  Maths.h  ParticleSystem.h  Physics.h  Scene.h  SceneManager.h  SystemIDs.h  TankBot.h
include/Events/: EventSystem.h  GameEvents.h
include/Generic/: Component.h  ImGuiEx.h  TypeAliases.h  Utilities.h
include/Maths/: Constants.h  CoreMath.h  Helpers.h  Interpolation.h  Math.h  Maths.h  Matrix2x2.h  Matrix3x3.h  Matrix4x4.h  MatrixRow.h  Quaternion.h  Random.h  Ray.h  Transform2D.h  Transform3D.h  Vector2.h  Vector3.h  Vector4.h  float2.h  float3.h  float4.h
include/Physics/: PhysicsSystem.h
include/Rendering/: Window.h
include/States/: StateMachine.h
include/Types/: DataTypeDefinitions.h  float2.h  half.h  int3.h
include/Utilities/: Easing.h
include/datatype/: float2.h  float3.h  float4.h  half.h  int2.h  int3.h  int4.h  matrix2x2.h  matrix3x3.h  matrix4x4.h  quaternion.h  ray.h
include/events/engine/: events.h
include/events/game/: events.h
include/maths/: math.h
include/objects/: GameObject.h  ObjectManager.h  ObjectPool.h
include/rendering/: camera.h  renderer.h
include/scenes/: Scene.h  SceneManager.h
include/utility/: colour.h  defines.h  imgui_ext.h  managed_memory_block.h  raycast.h  spherecast.h
src/: Camera.cpp  Easing.cpp  Engine.cpp  EventSystem.cpp  Game.cpp  GameObject.cpp  ImGuiEx.cpp  Interpolation.cpp  Logging.cpp  PhysicsSystem.cpp  StateMachine.cpp  TankBot.cpp  Utilities.cpp  float2.cpp  float3.cpp  float4.cpp  main.cpp
src/Maths/: CoreMath.cpp  Matrix2x2.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Quaternion.cpp  Transform2D.cpp  Transform3D.cpp  Vector2.cpp  Vector3.cpp  float2.cpp  float3.cpp
src/Rendering/: Window.cpp
src/datatypes/: float2.cpp  float3.cpp  float4.cpp  int2.cpp  int3.cpp  int4.cpp  matrix2x2.cpp  matrix3x3.cpp  matrix4x4.cpp  quaternion.cpp
src/maths/: interpolation.cpp
src/rendering/: camera.cpp  renderer.cpp
src/utility/: imgui_ext.cpp  raycast.cpp  spherecast.cpp
tools/shader_generator/: CMakeLists.txt
